--- a/style.css
+++ b/style.css
@@ -10,23 +10,27 @@ p {
 	text-align: center;
 }
 
+.container {
+	width:100%;
+}
+
 div {
-	width: 96%;
 	background-color: pink;
-	margin-top: 0 auto;
 	padding-top: 100px;
 	font-size: 2em;
-	float: left;
-	margin-right: 15px;
 }
 
 @media (min-width: 768px) {
 	div {
-	width: 48%;
-	background-color: purple;
-	margin-top: 1%;
+	background-color: gold;
 	padding-top: 100px;
 	font-size: 3em;
-	float: 
+	}
 }
+
+@media (min-width: 1180px) {
+	.container {
+		margin: 0 auto;
+		width: 1160px;
+	}
 }
