--- a/CSS/counter.css
+++ b/CSS/counter.css
@@ -3,7 +3,7 @@ body {
 }
 
 .catcounter {
-	background-color: white;
+	background-color: gold;
 	font-size: 2em;
 	margin: 100px auto;
 	text-align: center;
